--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">taller</string>
     <string name="open">open</string>
     <string name="close">close</string>
-    <string name="SignUp">SignUp</string>
-    <string name="Login">Login</string>
+    <string name="SignUp">Resgistrarse</string>
+    <string name="Login">Iniciar Sesion</string>
     <string name="usuario">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="credenciales">Usuario: Grupo9   contraseña:123456</string>
