--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">taller</string>
-    <string name="open">open</string>
-    <string name="close">close</string>
+    <string name="app_name">RestUp</string>
+    <string name="open">Abir</string>
+    <string name="close">Cerrar</string>
     <string name="SignUp">Resgistrarse</string>
     <string name="Login">Iniciar Sesion</string>
     <string name="usuario">Usuario</string>
@@ -12,6 +12,10 @@
     <string name="Reserva">Reservas</string>
     <string name="Menu">Menú</string>
     <string name="Promociones">Promociones</string>
+    <string name="BuscarPlato">Buscar por plato</string>
+    <string name="btnBuscar">Buscar</string>
+    <string name="btnNuevo">Nuevo</string>
+    <string name="btnSalir">Salir</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
