--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="btnBuscar">Buscar</string>
     <string name="btnNuevo">Nuevo</string>
     <string name="btnSalir">Salir</string>
+    <string name="btnCerrarSesion">Cerrar Sesion</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
